{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 118,
  "lineage": "8a4fafbd-6702-368f-7317-0940670095c3",
  "resources": [
    {
      "module": "module.simple_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "simple_internet_gateway",
      "provider": "module.simple_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781254623749:internet-gateway/igw-05373c62ee9b770bb",
            "id": "igw-05373c62ee9b770bb",
            "owner_id": "781254623749",
            "tags": {
              "Name": "chapter04-simple-internet-gateway",
              "exam": "saa_c03",
              "workspace": "chapter04"
            },
            "tags_all": {
              "Name": "chapter04-simple-internet-gateway",
              "exam": "saa_c03",
              "workspace": "chapter04"
            },
            "vpc_id": "vpc-0de7d6e15e9a719f2"
          },
          "dependencies": [
            "module.simple_vpc.aws_vpc.simple_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.simple_vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_rdp",
      "provider": "module.simple_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 3389,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3095219077",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0196d8bfb6fb92fa6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 80,
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.simple_vpc.aws_vpc.simple_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.simple_vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "allow_ssh",
      "provider": "module.simple_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2668469936",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0196d8bfb6fb92fa6",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 70,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.simple_vpc.aws_vpc.simple_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.simple_vpc",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "simple_network_interface",
      "provider": "module.simple_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781254623749:network-interface/eni-090ed610148e59c99",
            "id": "eni-090ed610148e59c99",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:04:c9:c6:e3:75",
            "owner_id": "781254623749",
            "private_ip": "172.16.100.177",
            "private_ip_list": [
              "172.16.100.177"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "172.16.100.177"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01898717b288cf5f2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b47cd9b7c6a26836",
            "tags": {
              "Name": "chapter04-simple-network-interface",
              "exam": "saa_c03",
              "workspace": "chapter04"
            },
            "tags_all": {
              "Name": "chapter04-simple-network-interface",
              "exam": "saa_c03",
              "workspace": "chapter04"
            }
          },
          "dependencies": [
            "module.simple_vpc.aws_subnet.simple_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.simple_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "simple_route",
      "provider": "module.simple_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05373c62ee9b770bb",
            "id": "r-rtb-039835351d796899a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039835351d796899a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.simple_vpc.aws_internet_gateway.simple_internet_gateway",
            "module.simple_vpc.aws_vpc.simple_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.simple_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "simple_security_group",
      "provider": "module.simple_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781254623749:security-group/sg-0c788632254357a68",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Default Outbound Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c788632254357a68",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP Access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS Access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "chapter04-simple-security-group",
            "name_prefix": "",
            "owner_id": "781254623749",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chapter04-simple-security-group",
              "exam": "saa_c03",
              "workspace": "chapter04"
            },
            "tags_all": {
              "Name": "chapter04-simple-security-group",
              "exam": "saa_c03",
              "workspace": "chapter04"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de7d6e15e9a719f2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.simple_vpc.aws_vpc.simple_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.simple_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "simple_subnet",
      "provider": "module.simple_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781254623749:subnet/subnet-0b47cd9b7c6a26836",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.16.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b47cd9b7c6a26836",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "781254623749",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chapter04-simple-subnet",
              "exam": "saa_c03",
              "workspace": "chapter04"
            },
            "tags_all": {
              "Name": "chapter04-simple-subnet",
              "exam": "saa_c03",
              "workspace": "chapter04"
            },
            "vpc_id": "vpc-0de7d6e15e9a719f2"
          },
          "dependencies": [
            "module.simple_vpc.aws_vpc.simple_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.simple_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "simple_vpc",
      "provider": "module.simple_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781254623749:vpc/vpc-0de7d6e15e9a719f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0196d8bfb6fb92fa6",
            "default_route_table_id": "rtb-039835351d796899a",
            "default_security_group_id": "sg-01898717b288cf5f2",
            "dhcp_options_id": "dopt-0ebbfe9932fd1d5a5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de7d6e15e9a719f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-039835351d796899a",
            "owner_id": "781254623749",
            "tags": {
              "Name": "chapter04-simple-vpc",
              "exam": "saa_c03",
              "workspace": "chapter04"
            },
            "tags_all": {
              "Name": "chapter04-simple-vpc",
              "exam": "saa_c03",
              "workspace": "chapter04"
            }
          }
        }
      ]
    },
    {
      "module": "module.transit_gateway",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "tgw_transit_gateway",
      "provider": "module.transit_gateway.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:eu-west-1:781254623749:transit-gateway/tgw-0c12f834be3dbf62f",
            "association_default_route_table_id": "tgw-rtb-0fd273da693c81f42",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "Transit Gateway",
            "dns_support": "enable",
            "id": "tgw-0c12f834be3dbf62f",
            "multicast_support": "disable",
            "owner_id": "781254623749",
            "propagation_default_route_table_id": "tgw-rtb-0fd273da693c81f42",
            "tags": {
              "Name": "chapter04-transit_gateway",
              "exam": "saa_c03",
              "workspace": "chapter04"
            },
            "tags_all": {
              "Name": "chapter04-transit_gateway",
              "exam": "saa_c03",
              "workspace": "chapter04"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.transit_gateway",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_route",
      "name": "blackhole",
      "provider": "module.transit_gateway.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "blackhole": true,
            "destination_cidr_block": "172.16.100.64/29",
            "id": "tgw-rtb-0fd273da693c81f42_172.16.100.64/29",
            "transit_gateway_route_table_id": "tgw-rtb-0fd273da693c81f42"
          },
          "dependencies": [
            "module.transit_gateway.aws_ec2_transit_gateway.tgw_transit_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_vpc_attachment_my_side",
      "provider": "module.transit_gateway.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-06a8a0a31225841d4",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-063818a0701b37cf3"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0c12f834be3dbf62f",
            "vpc_id": "vpc-0342ae1ba841b5081",
            "vpc_owner_id": "781254623749"
          },
          "dependencies": [
            "module.transit_gateway.aws_ec2_transit_gateway.tgw_transit_gateway",
            "module.transit_gateway.aws_subnet.tgw_subnet",
            "module.transit_gateway.aws_vpc.tgw_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "tgw_vpc_attachment_other_side",
      "provider": "module.transit_gateway.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0326c0558bb51683b",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0b47cd9b7c6a26836"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0c12f834be3dbf62f",
            "vpc_id": "vpc-0de7d6e15e9a719f2",
            "vpc_owner_id": "781254623749"
          },
          "dependencies": [
            "module.simple_vpc.aws_subnet.simple_subnet",
            "module.simple_vpc.aws_vpc.simple_vpc",
            "module.transit_gateway.aws_ec2_transit_gateway.tgw_transit_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_to_simple_vpc",
      "provider": "module.transit_gateway.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.17.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-039835351d796899a221142454",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-039835351d796899a",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-0c12f834be3dbf62f",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.simple_vpc.aws_vpc.simple_vpc",
            "module.transit_gateway.aws_ec2_transit_gateway.tgw_transit_gateway",
            "module.transit_gateway.aws_vpc.tgw_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway",
      "mode": "managed",
      "type": "aws_route",
      "name": "route_to_tgw_vpc",
      "provider": "module.transit_gateway.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "172.16.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08f5c7960142300723246677288",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08f5c796014230072",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "tgw-0c12f834be3dbf62f",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.simple_vpc.aws_vpc.simple_vpc",
            "module.transit_gateway.aws_ec2_transit_gateway.tgw_transit_gateway",
            "module.transit_gateway.aws_vpc.tgw_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tgw_subnet",
      "provider": "module.transit_gateway.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781254623749:subnet/subnet-063818a0701b37cf3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.17.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063818a0701b37cf3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "781254623749",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chapter04-tgw-subnet",
              "exam": "saa_c03",
              "workspace": "chapter04"
            },
            "tags_all": {
              "Name": "chapter04-tgw-subnet",
              "exam": "saa_c03",
              "workspace": "chapter04"
            },
            "vpc_id": "vpc-0342ae1ba841b5081"
          },
          "dependencies": [
            "module.transit_gateway.aws_vpc.tgw_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.transit_gateway",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tgw_vpc",
      "provider": "module.transit_gateway.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:781254623749:vpc/vpc-0342ae1ba841b5081",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0b1f6dff156f9ebcd",
            "default_route_table_id": "rtb-08f5c796014230072",
            "default_security_group_id": "sg-0264e76c8971954f8",
            "dhcp_options_id": "dopt-0ebbfe9932fd1d5a5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0342ae1ba841b5081",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08f5c796014230072",
            "owner_id": "781254623749",
            "tags": {
              "Name": "chapter04-tgw-vpc",
              "exam": "saa_c03",
              "workspace": "chapter04"
            },
            "tags_all": {
              "Name": "chapter04-tgw-vpc",
              "exam": "saa_c03",
              "workspace": "chapter04"
            }
          }
        }
      ]
    }
  ]
}